--- a/팀프_메인구현소스/css/sub_Mars.css
+++ b/팀프_메인구현소스/css/sub_Mars.css
@@ -1,9 +1,10 @@
 @charset "utf-8";
 
-/* body공통 */
-body *{
-    /* outline: 2px dashed red; */
+html{
+    scroll-behavior: smooth;
 }
+
+
 /* Mars 페이지공통 */
 .pg{
     max-width: 100vw;
