--- a/팀프_메인구현소스/css/sub_earth.css
+++ b/팀프_메인구현소스/css/sub_earth.css
@@ -156,7 +156,7 @@ h3 {
     min-height: 35vh;
     padding-top: 10vw;
     padding-bottom: 10vw;
-    background: url(../../00.자료수집/sub_img/earth02.jpg) no-repeat center/cover;
+    background: url(../planet/Earth/sub_img/earth02.jpg) no-repeat center/cover;
     background-attachment: fixed;
 }
 
