--- a/700.쉐도잉프로젝트/02.VOGUE_PJ/002.site/css/member.css
+++ b/700.쉐도잉프로젝트/02.VOGUE_PJ/002.site/css/member.css
@@ -6,9 +6,13 @@
 @import url(./core.css);
 @import url(./reset.css);
 @import url(./common.css);
+
+html, body {
+    overflow-x: visible;
+}
 /* 컨텐츠 영역 속박스 */
 .cont{
-    min-height: 600px;
+    min-height: 700px;
     padding: 15px;    
     padding-bottom: 100px;
 }
@@ -164,6 +168,38 @@ select:focus {
 }
 
 
+/* 약관동의박스 */
+#conf {
+    position: absolute;
+    /* 부모는? #cont */
+    top: 342px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 700px;
+    height: 620px;
+    border: 2px solid #ccc;
+    border-radius: 10px;
+    box-sizing: border-box;
+    background-color: #fff;
+}
+
+/* 동의/비동의 버튼박스 */
+.YNbox {
+    text-align: center;
+}
+/* 버튼공통 */
+.YNbox button {
+    width: 113px;
+    height: 40px;
+    border: 1px solid #737373;
+    border-radius: 5px;
+    color: #fff;
+    font-size: 1em;
+    font-weight: bold;
+    background-image: linear-gradient(to bottom, #ddd, #555);
+    margin: 0 20px;
+    cursor: pointer;
+}
 
 
 /* 미디어쿼리 690px 이하 시작 */
