--- a/010.VueJS학습/003.응용연습/vogue/css/core.css
+++ b/010.VueJS학습/003.응용연습/vogue/css/core.css
@@ -127,6 +127,10 @@ body * {
     color: #fff;
 }
 
+.cbx h2 small {
+    font-size: 14px;
+}
+
 /* 4. 스크롤 등장액션 클래스 */
 .scAct {
     transform: translateY(20%);
