--- a/010.VueJS학습/001.기초연습/css/small.css
+++ b/010.VueJS학습/001.기초연습/css/small.css
@@ -35,6 +35,7 @@ body {
     aspect-ratio: 280 / 400;
     /* 이미지 확대 시 넘치는 이미지 숨기기 */
     overflow: hidden;
+    cursor: pointer;
 }
 
 /* 그리드 갤러리 이미지 */
@@ -182,10 +183,20 @@ body {
     height: 100%;
     object-fit: cover;
 }
-
+/* 할인할 경우 원래가격 지움표시 클래스 */
 .del {
     text-decoration: line-through;
-    color: green;
+    color: orange;
+}
+/* 세일상품 표시 가상요소 */
+.sale::after{
+    content: '';
+    position: absolute;
+    width: 25px;
+    height: 30px;
+    margin-top: -41px;
+    margin-left: 14px;
+    background: url(../img_gallery/sale.png) no-repeat 0/100% 100%;
 }
 
 /*신상품 상세정보 영역*/
