--- a/700.쉐도잉프로젝트/03.Pilot_PJ/002.구현소스/css/sub.css
+++ b/700.쉐도잉프로젝트/03.Pilot_PJ/002.구현소스/css/sub.css
@@ -5,3 +5,41 @@
 @import url(reset.css);
 @import url(core.css);
 @import url(common.css);
+
+html,body{
+    overflow: visible;
+}
+
+/* 2.페이지영역 */
+/* 개별페이지 셋팅 */
+
+
+#ban{
+    height: 100vh;
+}
+/* 스와이퍼 디자인설정 */
+.swiper {
+    width: 100%;
+    height: 100%;
+}
+
+.swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.swiper {
+    margin-left: auto;
+    margin-right: auto;
+}
