--- a/010.VueJS학습/001.기초연습/css/vuexStore.css
+++ b/010.VueJS학습/001.기초연습/css/vuexStore.css
@@ -22,11 +22,14 @@ header a {
     color: #222;
     text-decoration: none;
 }
-header a:hover {
+header a:hover,
+header a.on {
     color: orangered;
     text-decoration: overline;
     text-decoration-style: wavy;
 }
+
+
 
 main {
     padding: 10px;
