--- a/700.쉐도잉프로젝트/03.Pilot_PJ/002.구현소스/css/sub.css
+++ b/700.쉐도잉프로젝트/03.Pilot_PJ/002.구현소스/css/sub.css
@@ -10,6 +10,9 @@ html,
 body {
     overflow: visible;
 }
+body{
+    overflow: hidden;
+}
 
 /* 2.페이지영역 */
 /* 개별페이지 셋팅 */
@@ -60,7 +63,7 @@ body {
 
 /* 신상품 박스 */
 /* .flowbx {
-    margin-bottom: 300px;
+    overflow: hidden;
 } */
 /* 움직일 리스트박스 */
 .flist {
@@ -126,4 +129,59 @@ body {
     border-bottom: 20px solid #101629;
     /* 삼각형 */
     /* border-top: 20px solid #101629;역삼각형 */
+}
+
+/* 컨텐츠영역2 - 스페셜영역 */
+.c2{
+    height: 50vh;
+    background: url(../images/gong.jpg) no-repeat fixed center top/cover;
+    text-align: center;
+}
+/* 타이틀 */
+.c2tit{
+    font: bold 5rem/50vh UB;
+    letter-spacing: 5px;
+    color: #fff;
+    text-shadow: 3px 3px 3px #000;
+}
+
+/* 컨텐츠영역 3,4번 공통 */
+.c3,.c4{
+    height: 100vh;
+}
+
+
+/********** 컨텐츠영역 3 - 비치스타일 ***********/
+/* #women {
+    background-color: hotpink;
+} */
+/* 여자패션 이미지영역 */
+.c3 .imgc{
+    flex-basis: 25%;
+    /* 등분할 영역까지가 0%이고 양수는 영역침범 */
+}
+/********** 컨텐츠영역 4 - 비치스타일 ***********/
+/* 컨텐츠영역4 이미지영역 */
+.c4 .imgc{
+    /* flex-basis: 15%; */
+    /* 등분할 영역까지가 0%이고 양수는 영역침범 */
+}
+/* 컨텐츠영역4 이미지 */
+.c4 img{
+    object-fit: fill;
+    /* width: auto; */
+    /* right: -26%; */
+}
+
+/* 컨텐츠영역 4 글자 */
+.c4 .txtc .tm{/* 오른쪽글자 */
+    top: 20%;
+    left: auto;
+    transform: none;
+    right: 5%;
+}
+.c4 .txtc .tw{/* 왼쪽글자 */
+    top: 70%;
+    left: 5%;
+    transform: none;
 }
