--- a/700.쉐도잉프로젝트/03.Pilot_PJ/002.구현소스/css/sub.css
+++ b/700.쉐도잉프로젝트/03.Pilot_PJ/002.구현소스/css/sub.css
@@ -53,6 +53,17 @@ body{
     overflow: hidden; /* 넘치는 자식요소 숨기기 + 자식마진포함 */
     aspect-ratio: 5/2.2;
 }
+/* 신상품 배경이미지 카테고리 클래스추가 */
+.c1.men{
+    background: url(../images/sub/men/01.new-arrival.png) no-repeat top/auto 134%;
+}
+.c1.women{
+    background: url(../images/sub/women/01.new-arrival.png) no-repeat top/auto 134%;
+}
+.c1.style{
+    background: url(../images/sub/style/01.new-arrival.png) no-repeat top/auto 134%;
+}
+
 /* 신상품 타이틀 */
 .c1tit {
     padding: 6% 15%;
