--- a/700.쉐도잉프로젝트/03.Pilot_PJ/002.구현소스/css/sub.css
+++ b/700.쉐도잉프로젝트/03.Pilot_PJ/002.구현소스/css/sub.css
@@ -148,6 +148,16 @@ body{
     background: url(../images/sub/men/02.special.png) no-repeat fixed center top/cover;
     text-align: center;
 }
+/* 신상품 배경이미지 카테고리 클래스추가 */
+.c2.men{
+    background-image: url(../images/sub/men/02.special.png);
+}
+.c2.women{
+    background-image: url(../images/sub/women/02.special.png);
+}
+.c2.style{
+    background-image: url(../images/sub/style/02.special.png);
+}
 /* 타이틀 */
 .c2tit{
     font: bold 5rem/50vh UB;
