--- a/014.React학습/react-app/chan-app/src/index.css
+++ b/014.React학습/react-app/chan-app/src/index.css
@@ -1,5 +1,6 @@
 /* 전체 페이지 공통 CSS
 -index.html페이지 전체에 적용됨! */
+@charset "utf-8";
 html,body {
   margin: 0;
   padding: 0;
@@ -7,7 +8,9 @@ html,body {
 body{
   background-color: #e5e5e5;
 }
-
+/* #root{
+  text-align: center;
+} */
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
