--- a/014.React학습/react-app/chan-app/src/index.css
+++ b/014.React학습/react-app/chan-app/src/index.css
@@ -1,12 +1,15 @@
 /* 전체 페이지 공통 CSS
 -index.html페이지 전체에 적용됨! */
 @charset "utf-8";
-html,body {
+html,body,ul,ol,dl,dt,dd,p,figure,figcaption,h1,h2,h3,h4 {
   margin: 0;
   padding: 0;
 }
 body{
   background-color: #e5e5e5;
+}
+ul,ol{
+  list-style: none;
 }
 /* #root{
   text-align: center;
