--- a/014.React학습/react-app/chan-app/src/dc/css/ban.css
+++ b/014.React학습/react-app/chan-app/src/dc/css/ban.css
@@ -2,6 +2,8 @@
 /* 메인배너용 CSS - ban.css */
 .banner{
     position: relative;
+    overflow: hidden;
+    /* 넘치는 배너 숨기기 */
 }
 .bantit{
     position: absolute;
@@ -14,11 +16,16 @@
 /* 배너슬라이드 */
 .slider{
     position: relative;
-    left: 0;
+    /* left: 0; */
+    display: flex;
 }
 .slider li{
     position: relative;
     /* 부모자격 */
+    flex-shrink: 0;
+    /* 강제축소옵션 해제 */
+    
+    width: 100%;
 }
 /* 배너 컨텐츠 버튼 */
 .banner button{
@@ -30,8 +37,49 @@
     cursor: pointer;
 }
 .banner button:hover{
-    background-color: hotpink;
+    background-color: #0074e8;
 }
 .banimg{
     width: 100%;
+}
+
+/* 이동버튼 */
+.banner .abtn{
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    font-size: 30px;
+    padding: 0;
+    box-sizing: content-box;
+    line-height: 40px;
+    cursor: pointer;
+}
+.lb{
+    left: 5vw;
+}
+.rb{
+    right: 5vw;
+}
+/* 블릿 */
+.indic{
+    position: absolute;
+    left: 50%;
+    bottom: 3vh;
+    transform: translateX(-50%);
+    display: flex;
+}
+.indic li{
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    border: 2px solid #fff;
+    margin: 0 5px;
+    cursor: pointer;
+    text-shadow: 0 0 2px #000;
+}
+.indic li.on{
+    background-color: rgba(255, 255, 255, 0.9);
 }
