--- a/700.쉐도잉프로젝트/04.DC_PJ/02.구현소스/dc-app/src/dc/css/menubtn.css
+++ b/700.쉐도잉프로젝트/04.DC_PJ/02.구현소스/dc-app/src/dc/css/menubtn.css
@@ -6,7 +6,7 @@
     font-family: 'Roboto Condensed';
     display: flex;
     margin: 30px auto;
-    width: 1320px;
+    max-width: 1320px;
 }
 .wrap{
     padding:0 12px;
