--- a/700.쉐도잉프로젝트/04.DC_PJ/02.구현소스/dc-app/src/dc/plugin/SwiperVid.css
+++ b/700.쉐도잉프로젝트/04.DC_PJ/02.구현소스/dc-app/src/dc/plugin/SwiperVid.css
@@ -29,12 +29,11 @@
 
 
 /* 기본 스와이퍼 디자인 변경 */
-.swiper-button-prev, .swiper-rtl .swiper-button-next{
-    background-color: red;
-}
+
 .swiper-slide{
     flex-direction: column;
     justify-content: flex-end;
+    cursor: pointer;
 }
 .swi{
     width: 100%;
