--- a/700.쉐도잉프로젝트/04.DC_PJ/02.구현소스/dc-app/src/dc/css/layout.css
+++ b/700.쉐도잉프로젝트/04.DC_PJ/02.구현소스/dc-app/src/dc/css/layout.css
@@ -1,23 +1,45 @@
 @charset "utf-8";
 .top{
-    background-image: linear-gradient(to bottom,#CCC,#111);
+    background-color: #fff;
     border: 4px double #000;
+
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 65px;
+    z-index: 999;
+    font-family: 'Roboto Condensed', sans-serif;
 }
 .gnb{
-    width: 800px;
+    max-width: 1320px;
     margin: 0 auto;
 }
 .gnb ul{
     display: flex;
     align-items: center;
     list-style: none;
+    gap: 0 10px;
+    height: 65px;
 }
 .gnb li{
     margin: 0 10px;
 }
+.gnb>ul>li{
+    /* 상위메뉴 부모자격 */
+    position: relative;
+    line-height: 2;
+}
 .gnb a{
-    color: #fff;
+    color: #222;
     text-decoration: none;
+    font-weight: bold;
+}
+.gnb a:nth-child(3)::after{
+    content: '';
+    border-top: 5px solid #000;
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
 }
 .gnb a:hover{
     color: hotpink;
@@ -25,6 +47,51 @@
     text-decoration-style: wavy;
     text-shadow: 2px 2px 2px #555;
 }
+/* 서브메뉴 */
+.smenu{
+    position: absolute;
+    left: 50%;
+    top: 56px;
+    transform: translateX(-50%);
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 5px rgb(177, 177, 177);
+    white-space: nowrap;
+    line-height: 2.5;
+    display: none;
+}
+.gnb>ul>li:hover .smenu{
+    display: block;
+}
+.smenu::before{
+    content:'';
+    position: absolute;
+    top: -17px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 0;
+    height: 0;
+    border-bottom: 16px solid rgb(236, 236, 236);
+    border-left: 15px solid transparent;
+    border-right: 15px solid transparent;
+    
+}
+.smenu::after{
+    content: '';
+    position: absolute;
+    top: -15px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 0;
+    height: 0;
+    border-bottom: 15px solid #fff;
+    border-left: 15px solid transparent;
+    border-right: 15px solid transparent;
+
+
+}
+
 h1{
     text-align: center;
 }
