--- a/700.쉐도잉프로젝트/04.DC_PJ/02.구현소스/dc-app/src/dc/css/vidintro.css
+++ b/700.쉐도잉프로젝트/04.DC_PJ/02.구현소스/dc-app/src/dc/css/vidintro.css
@@ -6,6 +6,7 @@
     max-width: 1320px;
     margin: 0 auto;
     margin-top: 30px;
+    margin-bottom: 100px;
     padding: 24px;
     display: flex;
     font-family: 'Roboto Condensed';
