--- a/700.쉐도잉프로젝트/04.DC_PJ/02.구현소스/dc-app/src/index.css
+++ b/700.쉐도잉프로젝트/04.DC_PJ/02.구현소스/dc-app/src/index.css
@@ -7,6 +7,7 @@ html,body,ul,ol,dl,dt,dd,p,figure,figcaption,h1,h2,h3,h4 {
 }
 body{
   background-color: #e5e5e5;
+  padding-top: 60px;
 }
 ul,ol{
   list-style: none;
