--- a/700.쉐도잉프로젝트/04.DC_PJ/02.구현소스/dc-app/src/dc/css/layout.css
+++ b/700.쉐도잉프로젝트/04.DC_PJ/02.구현소스/dc-app/src/dc/css/layout.css
@@ -118,7 +118,7 @@ iframe{
 .info{
     text-align: center;
     padding: 30px;
-    background-image: linear-gradient(to bottom, #CCC, #777);
+    background-color: #000;
     color: #fff;
     text-align: center;
 }
