--- a/700.쉐도잉프로젝트/04.DC_PJ/02.구현소스/dc-app/src/dc/plugin/SwiperVid.css
+++ b/700.쉐도잉프로젝트/04.DC_PJ/02.구현소스/dc-app/src/dc/plugin/SwiperVid.css
@@ -2,44 +2,79 @@
 
 #app {
     height: 100%;
-}
-.tit{
-    margin: 0 auto;
-    max-width: 1320px;
-    text-align: left;
-    font-size: 48px;
-    margin-top: 30px;
-    margin-bottom: 20px;
-}
-.swiper {
+  }
+  
+  .swiper {
     width: 100%;
-    height: 400px;
-}
-.vidswbox{
-    margin-bottom: 200px;
-}
-
-.swiper-slide {
+    padding: 10px;
+    margin: 20px 0;
+    box-sizing: border-box;
+  }
+  
+  .swiper-slide {
     text-align: center;
     font-size: 18px;
     background: #fff;
-
+  
     /* Center slide text vertically */
     display: flex;
     justify-content: center;
     align-items: center;
-    box-shadow: 0px 0px 5px #bbb;
-}
-
-.swiper-slide img {
+  }
+  
+  .swiper-slide img {
     display: block;
     width: 100%;
     height: 100%;
     object-fit: cover;
-}
+  }
 
 
+  /* 타이틀박스 */
+  .tit{    
+    font-family: 'Roboto Condensed', sans-serif;
+    font-size: 40px;
+    /* background: url(../../../public/images/dcm1.jpg); */
+  }
+  
+  /* 컨텐츠 박스 */
+  .swinbx{
+    width: 100%;
+    aspect-ratio: 1 / 1.1;
+    cursor: pointer;
+    user-select: none;
+    /* outline: 1px solid red; */
+    box-shadow: 4px 4px 5px rgba(0, 0, 0, 0.553);
+  }
+
+  /* 비디오이미지박스 */
+  .vidimg{
+    vertical-align: top;
+  }
+  .vidimg img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  /* 타이틀박스 */
+  .vidtit{ 
+    font-family: 'Roboto Condensed', sans-serif;
+    padding: 15px;
+  }
+  /* 카테고리 */
+  .vidtit h4{
+    font-size: 14px;
+    color: #555;
+  }
+  /* 동영상타이틀 */
+  .vidtit h3{
+    font-size: 20px;
+    margin-top: 15px;
+  }
+  
 /* 기본 스와이퍼 디자인 변경 */
+
 
 .swiper-slide{
     flex-direction: column;
@@ -52,7 +87,8 @@
 }
 .swiper{
     max-width: 1320px;
-    height: 330px;
+    height: 450px;
+    margin: 0 auto;
 }
 .swi_wrapper{
     width: 100%;
@@ -71,4 +107,10 @@
 .swiper-slide:nth-child(9) .swt
 {
     margin-bottom: 3%;
+}
+
+/* 슬라이드 끝에서 버튼숨김 */
+.swiper-button-next.swiper-button-disabled,
+.swiper-button-prev.swiper-button-disabled{
+    display: none;
 }
