--- a/700.쉐도잉프로젝트/04.DC_PJ/02.구현소스/dc-app/src/dc/css/ban.css
+++ b/700.쉐도잉프로젝트/04.DC_PJ/02.구현소스/dc-app/src/dc/css/ban.css
@@ -33,6 +33,12 @@
     
     width: 100%;
 }
+/* 슬라이드 이미지 */
+.slider img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
 /* 배너 컨텐츠 버튼 */
 .banner button{
     border-radius: 20px;
